[project]
name = "langflow-mcp-server"
version = "0.1.0"
description = "MCP Server exposing Neo4j / PGVector tools for ICA Langflow (replaces custom Python components)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp==3.3.1",
    "neo4j>=5.20.0",
    "python-dotenv>=1.0.0",
    # pgvector tools (ingest + hybrid-rerank search)
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    # embedding providers
    "httpx>=0.27.0",        # ollama provider
    "openai>=1.0.0",        # openai / openai-compatible provider
    "langchain-ibm>=0.3.0", # watsonx.ai provider (IBM IAM + project_id)
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
